turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:14: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  setCouleurBrosse( mov = rule(state)(test)(0))
                        ^